responsive design fixed logo added header and banner decomposed

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -13,3 +13,8 @@ a {
 .homeMenu {                
 	  background-color: #FFF !important;
 }
+
+.mobilebanner {           
+	  background-image: url('../images/molior7.png') !important;
+		background-size: cover !important;
+}
